test/error/compile_error_undeclared_variable/src/CompileErrorUndeclaredVariable.hx
package;

class CompileErrorUndeclaredVariable {
	public static function identity<T>(x:T):T {
		y = 1;
		return x;
	}
}
